# stella-cli

./: .env.local  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  COMMAND_DECK_DESIGN.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  PUBLISHING.md  README.md  RELEASING.md  SECURITY.md  arena-gate.json  deny.toml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md
bench/harbor_adapter/: README.md  pyproject.toml  run.sh
bench/harbor_adapter/stella_harbor/: __init__.py  atif.py  credential_bundle.py  host_attestation.py  secure_launcher.py
bench/harbor_adapter/tests/: test_adapter.py  test_host_attestation.py  test_secure_launcher.py
bench/terminal_bench_analysis/: README.md  artifact_secret_scan.py  freeze_tb21_study_seed.py  github_public_timing.py  pyproject.toml  tb21_analysis.py  tb21_evidence_contract.py  tb21_hybrid_analysis.py  tb21_study_seed.py
ocp-conformance/: Cargo.toml  README.md
ocp-conformance/src/: lib.rs  report.rs
ocp-conformance/tests/: conformance_suite.rs  stdio_roundtrip.rs
ocp-host/: Cargo.toml  README.md
ocp-host/src/: consent.rs  error.rs  host.rs  http.rs  lib.rs  provider.rs  stdio.rs  wire.rs
ocp-types/: Cargo.toml  README.md
ocp-types/src/: capability.rs  frame.rs  lib.rs  query.rs
stella-cli/: Cargo.toml  build.rs
stella-cli/src/: accounted_call.rs  agent.rs  agent_tests.rs  agents_installed.rs  attachments.rs  auth_cmd.rs  cache_insight.rs  candidate_ws.rs  claims.rs  command_deck.rs  config.rs  connect_cmd.rs  contextgraph.rs  credential_handoff.rs  credential_status.rs  discovery.rs  domains.rs  engine_config.rs  enterprise_telemetry.rs  enterprise_telemetry_tests.rs  env_files.rs  export.rs  extensions.rs  fleet_cmd.rs  init_fx.rs  interactive.rs  main.rs  main_tests.rs  mcp_cmd.rs  memory.rs  memory_cmd.rs  model_catalog.rs  ocp.rs  rules.rs  runtime.rs  session_persist.rs  settings.rs  settings_check.rs  skill_manager.rs  stats.rs  (+3 more)
stella-context/: Cargo.toml
stella-context/src/: clock.rs  embed.rs  error.rs  lib.rs  provider.rs  retrieval.rs  store.rs  writeback.rs
stella-core/: Cargo.toml
stella-core/proptest-regressions/: skills.txt
stella-core/src/: accounted_call.rs  budget.rs  bus.rs  compaction.rs  context_record.rs  discovery.rs  driver.rs  estimator.rs  event_sender.rs  extensions.rs  glob.rs  goal.rs  hooks.rs  lib.rs  loop_detect.rs  mcp_usage.rs  mining.rs  ports.rs  receipts.rs  retry.rs  router.rs  rules.rs  skills.rs  speculation.rs  tasks.rs
stella-fleet/: Cargo.toml
stella-fleet/src/: cache_schedule.rs  fleet.rs  git.rs  ledger.rs  lib.rs  monitor.rs  plan.rs
stella-graph/: Cargo.toml
stella-graph/src/: error.rs  frames.rs  generated.rs  graph.rs  import.rs  lang.rs  lib.rs  manifest.rs  parse.rs  queries.rs  storage.rs  store.rs  symbol.rs  walk.rs  watch.rs
stella-graph/tests/: frames.rs  generated_exclusion.rs  languages.rs  live_index.rs  watcher.rs
stella-mcp/: Cargo.toml
stella-mcp/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  oauth.rs  protocol.rs  registry.rs  sse.rs  stdio.rs  toolset.rs  transport.rs
stella-mcp/tests/: http_integration.rs  registry_integration.rs  stdio_integration.rs
stella-media/: Cargo.toml
stella-media/src/: artifact.rs  cost_gate.rs  credential.rs  emit.rs  error.rs  http.rs  jobs.rs  lib.rs  operation_journal.rs  preview.rs  provider.rs  svg.rs
stella-media/tests/: operation_journal.rs
stella-model/: Cargo.toml
stella-model/src/: anthropic.rs  attachment.rs  bedrock.rs  cache_economics.rs  catalog.rs  credential.rs  gemini.rs  http.rs  lib.rs  modelsdev.rs  openai.rs  provider.rs  provider_listing.rs  provider_parity.rs  sse.rs  vertex.rs  zai.rs
stella-model/tests/: credential_prompt_degrade.rs  live_smoke.rs
stella-observatory/: Cargo.toml
stella-observatory/src/: codegraph.rs  db.rs  fsview.rs  global.rs  lib.rs
stella-pipeline/: Cargo.toml
stella-pipeline/src/: candidate.rs  lib.rs  mcp_prefetch.rs  pipeline.rs  plan.rs  ports.rs  replay.rs  scope.rs  triage.rs  verify.rs  witness.rs
stella-pipeline/tests/: replay_fixtures.rs
stella-protocol/: Cargo.toml
stella-protocol/src/: attachment.rs  cache.rs  completion.rs  context_event.rs  error.rs  event.rs  lib.rs  provider.rs  role.rs  tool.rs
stella-serve/: Cargo.toml
stella-serve/src/: error.rs  frame.rs  http.rs  lib.rs  main.rs  pending.rs  remote.rs  server.rs  session.rs
stella-serve/tests/: bridge.rs  http.rs
stella-store/: Cargo.toml
stella-store/src/: cache_gaps.rs  cache_trend.rs  catalog.rs  ddl.rs  drain.rs  enterprise_telemetry.rs  home.rs  identity.rs  journal.rs  lib.rs  migrations.rs  notify.rs  private.rs  private_state_tests.rs  quarantine_tests.rs  receipts.rs  reconstruct.rs  sessions.rs  storage_lifecycle_tests.rs  telemetry.rs  tests.rs  usage.rs  usage_completeness_tests.rs
stella-store/tests/: enterprise_telemetry.rs
stella-tools/: Cargo.toml
stella-tools/examples/: dump_tools.rs
stella-tools/src/: agent_use.rs  apply_edits.rs  bash.rs  ci.rs  code_map.rs  custom.rs  delete.rs  diagnostics.rs  edit.rs  exec.rs  exploration.rs  file_touch.rs  gather.rs  glob.rs  graph.rs  grep.rs  hook_runner.rs  impact.rs  issue_ops.rs  issues.rs  lib.rs  media.rs  memory.rs  overview.rs  process.rs  project.rs  read.rs  registry.rs  repo.rs  sandbox.rs  schema_gate.rs  screenshot.rs  script.rs  scripts.rs  staleness.rs  subprocess_env.rs  tasks.rs  tracker_auth.rs  validate.rs  verify.rs  (+3 more)
stella-tools/tests/: media_replay.rs  web_integration.rs
stella-tui/: Cargo.toml
stella-tui/examples/: deck_demo.rs
stella-tui/src/: attach.rs  cache_panel.rs  clipboard.rs  composer.rs  deck.rs  deck_render.rs  deck_shell.rs  deck_tests.rs  deck_ui.rs  diff.rs  envelope.rs  fleet_dashboard.rs  fx.rs  graph.rs  help.md  input.rs  invaders.rs  lib.rs  markdown.rs  model.rs  progress.rs  render.rs  resource.rs  scenario.rs  scroll.rs  shell.rs  splash.rs  syntax.rs  term.rs  textline.rs  theme.rs  ui.rs
stella-tui/tests/: deck_snapshot.rs  progress_gold.rs
(+372 files in other folders)
