[workspace]
resolver = "3"
members = [
  "stella-protocol",
  "ocp-types",
  "ocp-host",
  "ocp-conformance",
  "stella-core",
  "stella-model",
  "stella-store",
  "stella-tools",
  "stella-context",
  "stella-graph",
  "stella-pipeline",
  "stella-mcp",
  "stella-media",
  "stella-fleet",
  "stella-tui",
  "stella-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxageninc/stella-cli"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "io-util", "sync"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
indicatif = "0.18"
libc = "0.2"
rand = "0.9"
proptest = "1"
toml = "0.9"
rpassword = "7"
base64 = "0.22"
crossterm = "0.28"
hmac = "0.12"
notify = "8"
ratatui = "0.29"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tempfile = "3"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Config for a future migration to cargo-dist (https://opensource.axo.dev/cargo-dist/).
# Today releases are cut by the hand-rolled .github/workflows/release.yml; this
# section lets a maintainer run `cargo dist init` and adopt cargo-dist without
# re-declaring targets/installers. `allow-dirty = ["ci"]` keeps our hand-written
# release workflow from being overwritten by `cargo dist generate`.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "homebrew"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
allow-dirty = ["ci"]
