[package]
name = "ocp-conformance"
description = "Public OCP conformance suite (host- and provider-side) plus the ocp-inspect debugging binary, analogous to MCP's inspector."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ocp-conformance"
readme = "README.md"
keywords = ["ocp", "context", "protocol", "conformance", "testing"]
categories = ["development-tools::testing", "command-line-utilities"]
# Overrides the workspace default (publish = false) — this crate is the
# industry-facing conformance suite meant to be published on its own
# (issue #19).
publish = true

# Dev/fixture binaries (ocp-inspect debugger, ocp-example-docs test fixture) —
# not part of the released product, so exclude them from dist artifacts.
[package.metadata.dist]
dist = false

[dependencies]
# Floor requirements — see the note in ocp-host/Cargo.toml: caret reqs break
# the release version stamp at the first minor bump.
ocp-types = { path = "../ocp-types", version = ">=0.1.0" }
ocp-host = { path = "../ocp-host", version = ">=0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap.workspace = true
colored.workspace = true

[[bin]]
name = "ocp-inspect"
path = "src/bin/ocp-inspect.rs"

# Also the child-process test fixture for both crates' integration tests,
# located via env!("CARGO_BIN_EXE_ocp-example-docs").
[[bin]]
name = "ocp-example-docs"
path = "src/bin/ocp-example-docs.rs"

[dev-dependencies]
tempfile.workspace = true
