[package]
name = "ocp-host"
description = "Open Context Protocol host runtime: provider discovery, stdio/http transports, capability negotiation, routing, consent gating. Usable by any Rust agent that wants OCP support."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ocp-host"
readme = "README.md"
keywords = ["ocp", "context", "protocol", "agents", "llm"]
categories = ["asynchronous", "network-programming", "api-bindings"]
# Overrides the workspace default (publish = false) — this crate is the
# industry-facing host runtime meant to be published on its own (issue #19).
publish = true

[dependencies]
# Floor requirement (not caret): the release pipeline stamps every workspace
# member to the release version at build time, so a caret req like "0.1.0"
# stops matching at the first minor bump (path deps must satisfy `version`
# too). ">=" keeps the stamped build resolving at any version and remains a
# valid crates.io requirement for the independent OCP publish (PUBLISHING.md).
ocp-types = { path = "../ocp-types", version = ">=0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true

[target.'cfg(unix)'.dependencies]
# Unix process-group creation (setsid) + kill(-pgid): a stdio provider's
# whole child tree dies on drop/shutdown, never outliving the host
# (06-context-protocol.md §3.5; 02-architecture.md §8). Same narrow
# OS-boundary use stella-tools' bash tool makes.
libc.workspace = true

[dev-dependencies]
wiremock = "0.6"
