[package]
name = "ocp-types"
description = "Open Context Protocol (OCP) wire types: context frames, queries, capabilities, provenance. MIT, zero deps beyond serde — publishable to crates.io independently of any stella code."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ocp-types"
readme = "README.md"
keywords = ["ocp", "context", "protocol", "agents", "llm"]
categories = ["encoding", "api-bindings"]
# Overrides the workspace default (publish = false) — this crate is the
# industry-facing artifact meant to be published on its own (issue #19).
publish = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
