[package]
name = "stella-cli"
description = "The stella CLI — a fast, BYOK, model-agnostic terminal coding agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "stella"
path = "src/main.rs"

# This is the only shipped binary. `publish = false` is inherited from the
# workspace (we don't publish to crates.io), so dist needs an explicit opt-in.
# `formula = "stella"` names the Homebrew formula after the `stella` binary
# (not the `stella-cli` crate), so users run `brew install .../stella`.
[package.metadata.dist]
dist = true
formula = "stella"

[dependencies]
stella-protocol = { path = "../stella-protocol" }
stella-core = { path = "../stella-core" }
stella-model = { path = "../stella-model" }
stella-tools = { path = "../stella-tools" }
stella-store = { path = "../stella-store" }
stella-mcp = { path = "../stella-mcp" }
stella-context = { path = "../stella-context" }
stella-graph = { path = "../stella-graph" }
stella-pipeline = { path = "../stella-pipeline" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
clap.workspace = true
colored.workspace = true
toml.workspace = true
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
