[package]
name = "stella-cli"
description = "The stella CLI — a fast, BYOK, model-agnostic terminal coding agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "stella"
path = "src/main.rs"

# This is the only shipped binary. `publish = false` is inherited from the
# workspace (we don't publish to crates.io), so dist needs an explicit opt-in.
# `formula = "stella"` names the Homebrew formula after the `stella` binary
# (not the `stella-cli` crate), so users run `brew install .../stella`.
[package.metadata.dist]
dist = true
formula = "stella"

[dependencies]
stella-protocol = { path = "../stella-protocol" }
contextgraph-types = { git = "https://github.com/macanderson/context-graph-protocol", rev = "58a933a2e1f894ae98adc9994bd9d0062a610ae8" }
contextgraph-host = { git = "https://github.com/macanderson/context-graph-protocol", rev = "58a933a2e1f894ae98adc9994bd9d0062a610ae8" }
stella-core = { path = "../stella-core" }
stella-model = { path = "../stella-model" }
stella-tools = { path = "../stella-tools" }
stella-store = { path = "../stella-store" }
stella-observatory = { path = "../stella-observatory" }
stella-mcp = { path = "../stella-mcp" }
stella-media = { path = "../stella-media" }
stella-context = { path = "../stella-context" }
stella-graph = { path = "../stella-graph" }
stella-fleet = { path = "../stella-fleet" }
stella-pipeline = { path = "../stella-pipeline" }
stella-tui = { path = "../stella-tui" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
reqwest.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
clap.workspace = true
colored.workspace = true
toml.workspace = true
dotenvy.workspace = true
libc.workspace = true
tempfile.workspace = true
# Masked TTY prompt for `stella connect … --token` (same crate stella-model
# uses for the interactive API-key prompt).
rpassword.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rusqlite.workspace = true
