[package]
name = "stella-context"
description = "THE CONTEXT PLANE: bi-temporal knowledge graph, embedding index, episodic memory, hybrid retrieval, context-frame assembly + token budgeting — one SQLite file, one engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ocp-types = { git = "https://github.com/macanderson/opencontextprotocol", rev = "7912257c51c796083e4e137ff80a8d18c957f965" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
