[package]
name = "stella-graph"
description = "Code-graph indexer: tree-sitter parsers (native), symbol + import-edge extraction, incremental re-index on file change. Implemented AS a built-in OCP provider feeding stella-context."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ocp-types = { package = "contextgraph-types", git = "https://github.com/macanderson/context-graph-protocol", rev = "58a933a2e1f894ae98adc9994bd9d0062a610ae8" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
rusqlite.workspace = true
sha2.workspace = true
notify.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-sequel.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
# `test-util` enables tokio's paused clock (`start_paused`), which makes the
# live-index pipeline tests deterministic: the debounce window auto-advances
# only while every task is idle, so a burst can never be split by scheduling.
tokio = { workspace = true, features = ["test-util"] }
