[package]
name = "stella-mcp"
description = "MCP client: external MCP servers' tools registered into the engine's tool registry (stdio + streamable http transports)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
stella-core = { path = "../stella-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.6"

# A tiny, self-contained MCP server used only by the integration tests. It
# reads newline-delimited JSON-RPC on stdin and answers with canned responses;
# the resilience flags (`--hang`, `--die-after`, `--garbage`, `--protocol-version`)
# drive the fault-injection tests. `tests/` locate it via
# `env!("CARGO_BIN_EXE_mcp-fixture-server")`.
[[bin]]
name = "mcp-fixture-server"
path = "src/bin/mcp-fixture-server.rs"
