[package]
name = "stella-media"
description = "Multimodal generation: image, SVG (generate -> validate -> sanitize -> optimize -> preview with repair loop), video (async jobs + cost gate), terminal preview ladder, artifact manifest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
base64.workspace = true
sha2.workspace = true
rusqlite.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
