[package]
name = "stella-observatory"
description = "Local telemetry dashboard: a loopback-only web view over the workspace's .stella stores — executions, tokens, cost, tools, memory, rules, reflections, skills, MCP, the code graph, the settings scope chain, and every other stella project on the machine. Read-only; serves embedded assets; no outbound traffic ever."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
rusqlite.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
# Re-hash exploration-map manifests for the /api/explorations freshness
# verdicts (the observatory re-reads artifacts rather than linking the
# stella crates that write them — same isolation as its store.db access).
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
