[package]
name = "stella-protocol"
description = "Serde types + port traits shared by every stella-cli crate: agent events, tool schemas, trace records, provider request/response envelopes, the Provider trait. Zero I/O of its own — the stability contract of the workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true
