[package]
name = "stella-store"
description = "Local DuckDB persistence: executions, full event streams (chain of thought), telemetry, file locks, and graph nodes/edges. One writer per session; readers are free."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
duckdb.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
