[package]
name = "stella-store"
description = "Local SQLite persistence: executions, full event streams (chain of thought), telemetry, file locks, and graph nodes/edges. One writer per session; readers are free."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
rusqlite.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
base64.workspace = true
sha2.workspace = true
rand.workspace = true

# Session-registry liveness checks (`kill(pid, 0)`), unix only.
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
tempfile.workspace = true
