[package]
name = "stella-tools"
description = "Built-in agent tools: read_file, write_file, edit_file, bash, grep, glob. Workspace-root-pinned, timeout-backed, size-capped."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
stella-core = { path = "../stella-core" }
stella-graph = { path = "../stella-graph" }
stella-media = { path = "../stella-media" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
libc.workspace = true
reqwest = { workspace = true }
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tempfile.workspace = true
