[package]
name = "stella-tools"
description = "Built-in agent tools: file CRUD, grep/glob, build/test/lint/format, project-declared scripts, a long-running process group, vendor-neutral repo tools, and the opt-in bash. Workspace-root-pinned, timeout-backed, size-capped."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
stella-core = { path = "../stella-core" }
stella-graph = { path = "../stella-graph" }
stella-media = { path = "../stella-media" }
serde.workspace = true
serde_json.workspace = true
# `net` for the tracker-OAuth loopback-redirect listener (127.0.0.1 callback).
tokio = { workspace = true, features = ["net"] }
async-trait.workspace = true
futures-util.workspace = true
libc.workspace = true
reqwest = { workspace = true }
# Tracker OAuth (PKCE S256, state) — same vetted crates as stella-mcp.
base64.workspace = true
rand.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tempfile.workspace = true
wiremock.workspace = true
