[package]
name = "stella-tui"
description = "ratatui event-log REPL per ADR-023 concepts: streaming render, diff view + files-touched panel, scope review card, HUD with live budget. Renders exclusively from AgentEvents."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
stella-protocol = { path = "../stella-protocol" }
arboard.workspace = true
png.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
crossterm.workspace = true
ratatui-comfy-tabs.workspace = true
tachyonfx.workspace = true
sysinfo.workspace = true
tui-big-text.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
