[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stella-harbor"
version = "0.1.0"
description = "Harbor agent adapter for the Stella coding CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Oxagen", email = "dev@oxagen.sh"}
]
keywords = ["benchmark", "harbor", "stella", "swe-bench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "harbor>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/oxageninc/stella"
Repository = "https://github.com/oxageninc/stella"

[tool.setuptools]
packages = ["stella_harbor"]

[tool.setuptools.package-data]
stella_harbor = ["py.typed"]
